--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
 Задание: Заполните массив с помощью цикла следующим образом: в первый элемент запишите '1', во второй '22', в третий '333' и так далее. -->
 
   <script>
-
+dfgdfg
 
 let ARR = [];
 
